--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "html2pdf.js": "^0.12.1",
+    "lucide-react": "^0.263.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.4.0",
-    "lucide-react": "^0.263.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "nodemon --watch src --ext js,json --exec node src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   },
   "eslintConfig": {
     "extends": [
